# Boris_Brain

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/: Boris_Brain.cpp  Boris_System_Setup.h
src/EnvProcessing/EP_Utils/: DatasetReader.h  FrameShell.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  settings.cpp  settings.h
src/EnvProcessing/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/EnvProcessing/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/EnvProcessing/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/EnvProcessing/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/EnvProcessing/VisualOdometry/: CMakeLists.txt  VO_Pipeline_Live.cpp  VO_Pipeline_Live.h
src/EnvProcessing/VisualOdometry/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/EnvProcessing/VisualOdometry/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/EnvProcessing/VisualOdometry/include/: AffLight.h  Camera.h  Feature.h  Frame.h  Map.h  Point.h  Settings.h
src/EnvProcessing/VisualOdometry/include/frontend/: CoarseInitializer.h  CoarseTracker.h  DSOViewer.h  FeatureDetector.h  FeatureMatcher.h  FullSystem.h  ImageAndExposure.h  ImageRW.h  LoopClosing.h  MinimalImage.h  PixelSelector2.h  Undistort.h
src/EnvProcessing/VisualOdometry/include/internal/: CalibHessian.h  FrameFramePrecalc.h  FrameHessian.h  GlobalCalib.h  GlobalFuncs.h  ImmaturePoint.h  IndexThreadReduce.h  PR.h  PointHessian.h  RawResidualJacobian.h  ResidualProjections.h  Residuals.h
src/EnvProcessing/VisualOdometry/include/internal/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctional.h  MatrixAccumulators.h
src/EnvProcessing/VisualOdometry/src/: Camera.cc  Feature.cc  Frame.cc  Map.cc  Point.cc  Setting.cc
src/EnvProcessing/VisualOdometry/src/frontend/: CoarseInitializer.cc  CoarseTracker.cc  DSOViewer.cc  FeatureDetector.cc  FeatureMatcher.cc  FullSystem.cc  ImageRW_OpenCV.cc  LoopClosing.cc  PixelSelector2.cc  Undistort.cc
src/EnvProcessing/VisualOdometry/src/internal/: FrameFramePrecalc.cc  FrameHessian.cc  GlobalCalib.cc  ImmaturePoint.cc  PR.cc  PointHessian.cc  Residuals.cc
src/EnvProcessing/VisualOdometry/src/internal/OptimizationBackend/: AccumulatedSCHessian.cc  AccumulatedTopHessian.cc  EnergyFunctional.cc
src/utils/: ClientMessages.h  Clientinput_Server.cpp  DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  UserInput_Server.cpp  UserInput_Server.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h  videoStream.cpp  videoStream.h
